sproduct.html added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <p>Summer Collection New Modern Design</p>
 
                 <div class="product-container">
-                    <div class="product">
+                    <div class="product" onClick = 'window.location.href = "sproduct.html";'>
                         <img src="img/products/f1.jpg" alt="">
                         <div class="product-desc">
                             <span>adidas</span>
@@ -317,6 +317,7 @@
                     </div>
                     <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
                 </div>
+
                 <div class="new-arrivals-product">
                     <img src="img/products/n8.jpg" alt="">
                     <div class="arrivals-desc">
