--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         </div>
                         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
                     </div>
-                    <div class="product">
+                    <div class="product" onClick = 'window.location.href = "sproduct.html";'>
                         <img src="img/products/f2.jpg" alt="">
                         <div class="product-desc">
                             <span>adidas</span>
@@ -97,7 +97,7 @@
                         </div>
                         <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
                     </div>
-                    <div class="product">
+                    <div class="product" onClick = 'window.location.href = "sproduct.html";'>
                         <img src="img/products/f3.jpg" alt="">
                         <div class="product-desc">
                             <span>adidas</span>
