--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <ul id="nav-bar">
             <i class="fa-solid fa-xmark" id="close"></i>
-            <li><a class = 'active' href="index.html">Home</a></li>
+            <li><a class = 'active' href="index.html"  target="_blank">Home</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="about.html">About</a></li>
